/* མགྱོགས་ཡིག་གི་བྱུང་རབས། */

--- a/མགྱོགས་ཡིག.mw
+++ b/མགྱོགས་ཡིག.mw
@@ -10,7 +10,7 @@
 
 ཨོ་རྒྱན་རྡོ་རྗེ་གིས་བྲིས་མིའི་ནང་ གུ་རུ་རིན་པོ་ཆེ་བུམ་ཐང་ལུ་ལན་ཐེངས་༢ པ་བྱོན་པའི་སྐབས་ ལྡན་མ་རྩེ་མང་ཡང་འོང་ཡོདཔ་དང་ ཁོ་གིས་བརྩམས་མི་ ལྷོ་ཡིག་འདི་ མགྱོགས་ཡིག་མེན་པར་ མགྱོགས་ཚུགསམ་ཨིནམ་སྦེ་བྲིས་ཏེ་འདུག ལྡན་མ་རྩེ་མང་གི་ཤུལ་ལས་ཡི་གུ་ལུ་མཁས་པ་ཡོད་མི་ རིམ་པར་བརྒྱུད་དེ་འོང་ཡོདཔ་ལས་ མཁས་པའི་མི་ལེ་ཤ་ར་འཐོན་ནུག འབྲུག་ལུ་ཡི་གུ་ཧམ་པ་བདུན་དེ་ཅིག་དར་ཏེ་འདུག ཡི་གུ་ཚུ་ཡང་ ཚུགས་ཡིག་ཡང་ན་དབུ་ཅན། ལྷོ་ཡིག་མགྱོགས་ཚུགས་མ། ལྷོ་ཡིག་མགྱོགས་ཡིག ལཉྫ། ཝརྟུ། དབུ་མེད། དབུ་མེད་ཚུགས་རིང་བཅས་བདུན་ཨིན་པས། མཁས་པ་ཚུ་གིས་ ཡི་གུ་མགྱོགས་པར་མགྱོགས་པར་བྲིས་དགོཔ་བྱུང་པའི་སྐབས་ མགྱོགས་ཚུགས་མ་འདི་ མགྱོགས་ཡིག་གི་བཟོ་རྣམ་ལུ་གྱུར་ཏེ་བྲིས་ཡོདཔ་སྦེ་བཤད་དེ་འདུག
 
-[https://twotruths.org/khenpo-phuntshok-tashi/ མཁན་པོ་ཕུན་ཚོགས་བཀྲ་ཤིས།] ཀྱིས་བྲིས་མིའི་ནང་ ནང་པའི་ཐོ་དང་འཁྲིལཔ་ད་ཧེ་མ་ལས་ར་ སྐད་རིགས་༣༦༠ དང་ཡིག་རིགས་༦༤ ཙམ་ཡོད་པའི་ལོ་རྒྱུས་ཡོདཔ་ལས་ མགྱོགས་ཡིག་ཡང་ ཡིག་རིགས་ཚུ་གི་གྲངས་སུ་ཡོད་པའི་དོགས་པ་འདུག དེ་འབདཝ་ལས་ ལྡན་མ་རྩེ་མང་གི་སྐབས་ལུ་བརྩམས་ཡོདཔ་མེན་པར་ ཁོ་གིས་གུ་རུ་རིན་པོ་ཆེའི་ཕྱག་ཞུ་སྟེ་བུམ་ཐང་ལུ་ཆོས་གནང་མི་ཚུ་དང་ ལོ་རྒྱུས་བྲིས་མི་ཚུ་ མགྱོགས་ཡིག་ནང་སྦེ་བྲིས་ཡོདཔ་མ༌ཚད༌ ཁོ༌རང༌ཡང༌ཡིག༌རིགས་༦༤ གི་ནང་མཁས་དྲགས་ཡོདཔ་ལས་བརྟེན་ཏེ་ དེ་བསྒང་ལྷོ་ཡིག་ནང་སྦེ་བྲིས་བཞགཔ་མ་ཚད་ ཡི་གུ་ལ་ལུ་ཅིག་ གཏེར་སྦེ་སྦ་བཞག་མི་ཚུ་ ཤུལ་ལས་ ཁོ་རའི་སྤྲུལ་པ་ གཏེར་སྟོན་ཨོ་རྒྱན་བཟང་པོ་གིས་གཏེར་བཞེས་ཏེ་ཡོདཔ་ཨིན་པས། དེ་བསྒང་ལྡན་མ་རྩེ་མང་གིས་ ལྷོ་ཡིག་གམ་མོན་ཡིག་འདི་ བུམ་ཐང་ལུ་འབྲི་ནིའི་སྲོལ་བཙུགསཔ་ལས་ དར་ཁྱབ་སྦོམ་སོང་ཡོདཔ་སྦེ་འདུག
+[https://twotruths.org/khenpo-phuntshok-tashi/ མཁན་པོ་ཕུན་ཚོགས་བཀྲ་ཤིས་] ཀྱིས་བྲིས་མིའི་ནང་ ནང་པའི་ཐོ་དང་འཁྲིལཔ་ད་ཧེ་མ་ལས་ར་ སྐད་རིགས་༣༦༠ དང་ཡིག་རིགས་༦༤ ཙམ་ཡོད་པའི་ལོ་རྒྱུས་ཡོདཔ་ལས་ མགྱོགས་ཡིག་ཡང་ ཡིག་རིགས་ཚུ་གི་གྲངས་སུ་ཡོད་པའི་དོགས་པ་འདུག དེ་འབདཝ་ལས་ ལྡན་མ་རྩེ་མང་གི་སྐབས་ལུ་བརྩམས་ཡོདཔ་མེན་པར་ ཁོ་གིས་གུ་རུ་རིན་པོ་ཆེའི་ཕྱག་ཞུ་སྟེ་བུམ་ཐང་ལུ་ཆོས་གནང་མི་ཚུ་དང་ ལོ་རྒྱུས་བྲིས་མི་ཚུ་ མགྱོགས་ཡིག་ནང་སྦེ་བྲིས་ཡོདཔ་མ༌ཚད༌ ཁོ༌རང༌ཡང༌ཡིག༌རིགས་༦༤ གི་ནང་མཁས་དྲགས་ཡོདཔ་ལས་བརྟེན་ཏེ་ དེ་བསྒང་ལྷོ་ཡིག་ནང་སྦེ་བྲིས་བཞགཔ་མ་ཚད་ ཡི་གུ་ལ་ལུ་ཅིག་ གཏེར་སྦེ་སྦ་བཞག་མི་ཚུ་ ཤུལ་ལས་ ཁོ་རའི་སྤྲུལ་པ་ གཏེར་སྟོན་ཨོ་རྒྱན་བཟང་པོ་གིས་གཏེར་བཞེས་ཏེ་ཡོདཔ་ཨིན་པས། དེ་བསྒང་ལྡན་མ་རྩེ་མང་གིས་ ལྷོ་ཡིག་གམ་མོན་ཡིག་འདི་ བུམ་ཐང་ལུ་འབྲི་ནིའི་སྲོལ་བཙུགསཔ་ལས་ དར་ཁྱབ་སྦོམ་སོང་ཡོདཔ་སྦེ་འདུག
 
 མགྱོགས་ཡིག་འདི་ འབྲུག་ལུ་མ་གཏོགས་ས་ཁོངས་གཞན་ཚུ་ནང་འབྲི་སྲོལ་མེདཔ་མ་ཚད་ ཧེ་མའི་ལོ་རྒྱུས་ཚུ་ལུ་གཞི་བཞག་བལྟཝ་ད་ཡང་ འབྲུག་ལུ་མ་གཏོགས་གཞན་ཁར་ལག་ལེན་འཐབ་སྲོལ་མེདཔ་སྦེ་མཇལཝ་ཨིན་པས། མགྱོགས་ཡིག་འདི་ བོདཔ་ཚུ་གིས་འབད་བ་ཅིན་ ས་ཕྱོགས་ལྷོ་ཁ་ཐུག་ལུ་ཡོངས་གྲགས་སྦེ་ལག་ལེན་འཐབ་དོ་ཡོདཔ་ལས་ ལྷོ་ཡིག་ཟེར་མིང་བཏགས་ནུགདེ་བསྒང་འབྲུག་མི་ཚུ་ ཆོས་དང་ཚོང་འབྲེལ་གྱི་དོན་ལུ་བོད་དང་གཅིག་ཁར་ འབྲེལ་བ་ལེ་ཤ་འཐབ་དོ་ཡོདཔ་ལས་ བོད་ལུ་ཡི་གུ་བྲིས་བཏང་མི་ཚུ་ཡང་ བོདཔ་ཚུ་གིས་མགྱོགས་ཡིག་ལྷག་མ་ཚུགསཔ་ལས་ བོད་ལུ་ཡོངས་གྲགས་ཡོད་པའི་ དབུ་མེད་ཀྱི་ཡི་གུ་ནང་སྦེ་བྲིས་བཏང་སྲོལ་འདུག དེ་འབདཝ་ད་ འབྲུག་ནང་འཁོད་ཀྱི་བཀའ་ཤོག་དང་ སྤྱིར་བཏང་ཡིག་འགྲུལ་ཚུ་མགྱོགས་ཡིག་ནང་ལག་ལེན་འཐབ་སྡོད་ནུག 
 ད་རེས་ནངས་པ་འབད་བ་ཅིན་འབྲུག་ལུ་ཧེ་མ་ལས་བཏོན་པའི་གཏེར་གྱི་ཡིག་ཆ་དང་ བླམ་ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་རིན་པོ་ཆེ་དང་ ཤུལ་ལས་འབྲུག་རྒྱལ་པོ་རིམ་བྱོན་ཚུ་གི་སྐབས་ལུ་གནང་མིའི་བཀའ་ཤོག་དང་།སྤྱིར་བཏང་ཡིག་འགྲུལ། དེ་ལས་རྩིས་ཐོ་ཚུ་མགྱོགས་ཡིག་ནང་གནང་ཡོད་མི་ཚུ་ སྒེར་མི་དང་། འགྲེམས་སྟོན་ཁང་། དཔེ་མཛོད་ཚུ་ནང་འདུག དེ་ཚུ་ལུ་བལྟ་བ་ཅིན་ མགྱོགས་ཡིག་གི་སྲོལ་རྒྱུན་འདི་ དུས་རབས་༨ པ་དེ་ཅིག་ལས་ར་ འབྲུག་ལུ་གཞི་བཙུགས་འབད་ཡོདཔ་དང་ ཡོངས་གྲགས་སྦེ་དར་ཁྱབ་སོང་ཡོདཔ་ལས་བརྟེན་ཏེ་ ད་ལྟོ་འབྲུག་གི་རྒྱལ་ཡོངས་ཀྱི་ཡི་གུ་སྦེ་བརྩི་ཡོདཔ་ཨིན།
