*Empty MediaWiki Message*

--- a/མགྱོགས་ཡིག.mw
+++ b/མགྱོགས་ཡིག.mw
@@ -1,4 +1,6 @@
-== ཞིབ་འཚོལ་གྱི་རྒྱབ་ཁུངས། ==
+[[File:Bhutan Joyig script (30 consonants).png|thumb|256px|right|'''མགྱོགས་ཡིག''']]
+
+== ཞིབ་འཚོལ་གྱི་རྒྱབ་ཁུངས། == 
 
 འབྲུག་གི་རྒྱལ་ཡོངས་སྐད་ཡིག་རྫོང་ཁའི་ཡིག་གཟུགས་འདི་མགྱོགས་ཡིག་ར་ཨིན་ཟེར་ཆ་བཞགཔ་ཨིན། མགྱོགས་ཡིག་འདི་རྒྱལ་ཡོངས་ཡིག་གཟུགས་སྦེ་ཆ་བཞག་མི་འདི་ མགྱོགས་ཡིག་བརྩམས་སུ་འདི་ འབྲུག་ལུ་ར་འབདཝ་ལས་བརྟེན་ཏེ་ཨིན། དེ་ཡང་ ལོ་རྒྱུས་དང་རྒྱབ་བརྟེན་དཔེ་དེབ་མང་རབས་ཅིག་ནང་ལས་ར་ མགྱོགས་ཡིག་འདི་འབྲུག་ལུ་ར་བརྩམས་ཏེ་ ལག་ལེན་ཡང་ འབྲུག་ལུ་ར་འཐབ་སྲོལ་ཡོདཔ་ལས་བརྟེན་ཏེ་ཨིན། ད་རེས་ཀྱི་མགྱོགས་ཡིག་གི་ཞིབ་བཅུད་མདོར་བསྡུས་ཅིག་ཕུལ་མི་འདི་ རྫོང་ཁ་གོང་འཕེལ་ལྷན་ཚོགས་ཀྱི་ལྷན་ཚོགས་ཐེངས་༢༦ པའི་ནང་མགྱོགས་ཡིག་གི་སྲིད་བྱུས་ཀྱི་སྐོར་ལས་ སྙན་ཞུ་ཅིག་ཕུལ་དགོཔ་སྦེ་ཡོད་མི་དང་ ལྷག་པར་དུ་ མགྱོགས་ཡིག་གི་སྐོར་ལས་གནས་ཚུལ་ཡོད་མི་ཚུ་བསྡུ་སྒྲིག་འབད་དེ་ གནས་ཚུལ་ཆ་ཚང་ཅིག་བསྡུ་ཚུགས་པའི་ཕན་པ་ལུ་དམིགས་ཏེ་ཨིན། 
 མ་འོངས་པའི་ནང་ ལག་ལེན་འཐབ་ནིའི་དོན་ལུ་ ཞིབ་འཚོལ་མཐིལ་ཕྱིན་ཅིག་འབད་དགོཔ་ཡོདཔ་ཨིན། ད་རེས་ཀྱི་སྙན་ཞུའི་ནང་ འབྲུག་ནང་འཁོད་དང་ ལྷག་པར་དུ་ཐིམ་ཕུག་ལུ་བཞུགས་མི་ ཤེས་ཡོན་ཅན་དང་ མགྱོགས་ཡིག་གི་སྐོར་ལས་བྲིས་ཡོད་མིའི་གནས་ཚུལ་དང་དཔེ་དེབ་ཚུ་ལས་ཁུངས་གཏུགས་འབད་དེ་བྲིས་ཡོདཔ་ཨིན། དཔེ་དེབ་དང་། གནས་ཚུལ། མི་ངོམ་ཚུ་གི་ཐོ་ཅིག་ རྒྱབ་བརྟེན་གྱི་གྲངས་སུ་བཙུགས་ཡོད།
