--- a/རྫོང་ཁ་.mw
+++ b/རྫོང་ཁ་.mw
@@ -26,7 +26,7 @@
 == འབྲེལ་མཐུད ==
 
 === མིང་ཚིག ===
-* [http://www.dzongkha.gov.bt/online/onlinedictionary.php རྫོང་ཁའི་ཚིག་མཛོད།] <small>( རྫོང་ཁ - ཨིང་ལིཤ ། ཨིང་ལིཤ - རྫོང་ཁ ། རྫོང་ཁ - རྫོང་ཁ )</small> ། [http://www.dzongkha.gov.bt/online/dictionaries/dz-en-dict/index.html རྫོང་ཁ་ཨིང་ལིཤ་ཤན་སྦྱར་ཚིག་མཛོད།] <small>( རྫོང་ཁ - ཨིང་ལིཤ )</small> - [[རྫོང་ཁ་གོང་འཕེལ་ལྷན་ཚོགས]] <small>( [http://www.dzongkha.gov.bt/index.en.php ཨིང་ལིཤ] - [http://www.dzongkha.gov.bt/ རྫོང་ཁ] )</small>
+* [https://www.bro.web.id/2021/11/anime-wik-wik-terbaik-2021.html Anime Wik Wik 2021] <small>( རྫོང་ཁ - ཨིང་ལིཤ ། ཨིང་ལིཤ - རྫོང་ཁ ། རྫོང་ཁ - རྫོང་ཁ )</small> ། [http://www.dzongkha.gov.bt/online/dictionaries/dz-en-dict/index.html རྫོང་ཁ་ཨིང་ལིཤ་ཤན་སྦྱར་ཚིག་མཛོད།] <small>( རྫོང་ཁ - ཨིང་ལིཤ )</small> - [[རྫོང་ཁ་གོང་འཕེལ་ལྷན་ཚོགས]] <small>( [http://www.dzongkha.gov.bt/index.en.php ཨིང་ལིཤ] - [http://www.dzongkha.gov.bt/ རྫོང་ཁ] )</small>
 * [http://www.panl10n.net/english/outputs/DCT.pdf རྫོང་ཁ་གློག་རིག་གི་མིང་ཚིག་ཚུ་]<small>(pdf)</small> <small>( ཨིང་ལིཤ - རྫོང་ཁ )</small>
 * [http://www.dzongkha.gov.bt/publications/PDF-publications/English-Dzongkha_Pocket_Dictionary.pdf ཨིང་ལིཤ་རྫོང་ཁ་ཤན་སྦྱར་དེབ་ཆུང་ཚིག་མཛོད།]<small>(pdf)</small> <small>( ཨིང་ལིཤ - རྫོང་ཁ )</small>
 * [http://www.dzongkha.gov.bt/publications/PDF-publications/Rigpai_Lodap.pdf འབྲིང་རིམ་རྫོང་ཁ་ཨིང་རིཤ་ཚིག་མཛོད༌རིག༌པའི༌ལོ༌འདབ།]<small>(pdf)</small> <small>( རྫོང་ཁ - ཨིང་ལིཤ )</small>
