--- a/མཚན་མཐུན་དགའ་རོགས་སྒྲིག་པ།.mw
+++ b/མཚན་མཐུན་དགའ་རོགས་སྒྲིག་པ།.mw
@@ -1,3 +1,15 @@
-[[File:Gay flag.svg|thumb]]
 [[File:Gay couple.jpg|thumb]]
+[[File:World laws pertaining to homosexual relationships and expression.svg|thumb|National laws<br>
+{{legend|#025|Marriage}}
+{{legend|#06F|Other partnerships}}
+{{legend|#decd87|Laws against expression}}
+{{legend|#f9dc36|Fines or prison (not applied)}}
+{{legend|#ec8028|Fines or prison}}
+{{legend|#c63|Death penalty (not applied)}}
+{{legend|#800000|Death penalty}}
+]]
+[[File:LGBT rights at the UN.svg|thumb|UN declarations on LGBT rights<br>
+{{legend|#5b92e5|Supporting (2008 or 2011)}}
+{{legend|#aa0000|In opposition}}
+]]
 '''མཚན་མཐུན་དགའ་རོགས་སྒྲིག་པ།'''
