--- a/མཚན་མཐུན་དགའ་རོགས་སྒྲིག་པ།.mw
+++ b/མཚན་མཐུན་དགའ་རོགས་སྒྲིག་པ།.mw
@@ -1,4 +1,5 @@
-[[File:Gay couple.jpg|thumb]]
+[[File:Male Couple With Child-02.jpg|thumb]]
+[[File:Just married (9178119295).jpg|thumb]]
 [[File:World laws pertaining to homosexual relationships and expression.svg|thumb|National laws<br>
 {{legend|#025|Marriage}}
 {{legend|#06F|Other partnerships}}
