*Empty MediaWiki Message*

--- a/ཨིསི་ཊོ་ནི་ཡ་.mw
+++ b/ཨིསི་ཊོ་ནི་ཡ་.mw
@@ -2,6 +2,7 @@
 
 [[File:Flag of Estonia.svg|right|150px]]
 [[File:LocationEstonia.png|right|200px]]
+[[File:Drone video of Estonia 2021.webm|thumb|ཨིསི་ཊོ་ནི་ཡ་ 2021]]
 '''ཨིསི་ཊོ་ནི་ཡ།'''
 
 ----
