--- a/འབྲུག་གི་བཟོ་བཀོད་རིག་པ།.mw
+++ b/འབྲུག་གི་བཟོ་བཀོད་རིག་པ།.mw
@@ -16,4 +16,4 @@
 
 == ཁུངས་གཏུག་ ==
 [http://admin.theiguides.org/Media/Documents/TRADITIONAL-ARCHITECTURE1.pdf]  (n.d.). TRADITIONAL ARCHITECTURE GUIDELINES. 
-: [http://pubs.sciepub.com/ajcea/5/3/6] (2007) A Review on Traditional Architecture Houses in Buddhist Culture. 5(3), 113–123.
+<br/> [http://pubs.sciepub.com/ajcea/5/3/6] (2007) A Review on Traditional Architecture Houses in Buddhist Culture. 5(3), 113–123.
