*Empty MediaWiki Message*

--- a/Naruhito.mw
+++ b/Naruhito.mw
@@ -1,3 +1,6 @@
 [[File:Crown Prince Naruhito (2018).jpg|250px|thumb|徳仁]]
 
 '''Naruhito''' (16-02-1960) རྒྱལ་པོ [[ཇ་པཱན]]
+
+[[Category:ཇཱ་པཱན]]
+[[Category:མི་མང་]]
