*Empty MediaWiki Message*

--- a/Monte_Aguila.mw
+++ b/Monte_Aguila.mw
@@ -1,2 +1,4 @@
 [[File:Inauguracion Nueva Plaza de Monte Aguila 2017 (12).jpg|thumb|288x288px|Monte Aguila, [[ཅི་ལེ]]]]
 '''Monte Aguila''' is a city of [[ཅི་ལེ]]
+[[Category:ཅི་ལེ]]
+[[Category:གྲོང་􀮣]]
