*Empty MediaWiki Message*

--- a/༴༵༦༦༴༴༤༤.mw
+++ b/༴༵༦༦༴༴༤༤.mw
@@ -1,3 +1,5 @@
 '''༴༵༦༦༴༴༤༤'''　Utsunomiya　Line
 [[file:JR EAST E231-1000 U541.jpg|thumb|right|240px|1stCar]]
 [[file:E233 3000 L06.JPG|thumb|right|240px|2ndCar]]
+
+[[Category:ཇཱ་པཱན]]
