*Empty MediaWiki Message*

--- a/བརྡ་སྐད་.mw
+++ b/བརྡ་སྐད་.mw
@@ -1,3 +1,5 @@
 [[File:Sign Language.svg|thumbnail]]
 [[File:Preservation of the Sign Language (1913).webm|thumb|thumbtime=5|''Preservation of the Sign Language'' (1913)]]
 [[File:RZ.Maldives sign language.jhwh.png|thumb|left|290px|བརྡ སྐད, མལ་དི་ཝེསུ། (ཡ་ཧོ་ཝཱས་བཟོས་པའི་དངོས་པོ་)]]
+
+[[Category:བོད་ཡིག]]
