--- a/འབྲུག་དབང་འདུས་རྩེ་ལྷ་ཁང་.mw
+++ b/འབྲུག་དབང་འདུས་རྩེ་ལྷ་ཁང་.mw
@@ -8,3 +8,5 @@
 ལྷ་ཁང་ཐོག་གཉིས་པའི་ནང་ ཆོས་སྲུང་དཀྱིལ་འཁོར་གྱི་ལྡེབས་རིས་ རྟ་མགྲིན་དང་རྡོ་རྗེ་ཕུར་པ། གཞན་ཡང་ རྒྱ་གར་གྱི་གྲུབ་ཐོབ་དང་  འབྲུག་པ་བཀའ་བརྒྱུད་ཀྱི་བླམ་རིམ་བྱོན་ཚུ་གི་ལྡེབས་རིས་ཚུ་ཡོདཔ་ཨིན། རྒྱབ་ཁ་ཐུག་ལུ་ དཔལ་ཡེ་ཤེས་དགོན་པོའི་ཆོས་སྲུང་ལྷ་ཁང་གཅིག་ཡང་ཡོདཔ་ཨིན། ལྷ་ཁང་དེ་ནང་ དཔལ་ལྡན་ལྷ་མོ་བདུད་གསོལ་མ་དང་ཚེ་རིང་མའི་སྐུ་འདྲ། གཞན་ཡང་རྫོང་ཁག་ ༢༠ གི་གནས་བདག་ཚུ་གི་སྐུ་འདྲ་ཚུ་ཡོདཔ་ཨིན།
 == ཁུངས་གཏུག་ ==
 <references />
+
+[[Category:ཐིམ་ཕུ]]
