*Empty MediaWiki Message*

--- a/རྡོ་གར་རྡོབ་རྗི་རྫོང་.mw
+++ b/རྡོ་གར་རྡོབ་རྗི་རྫོང་.mw
@@ -1,1 +1,3 @@
 སྔོན་ བོད་ལས་རྗེ་བཙུན་མི་ལའི་སྐུ་གཅིག་ རྗེ་ངག་དབང་འབྲུག་པའི་གདན་ས་  འཚེམ་རྡོ་མགོན་པ་ཟེར་ ཞུ་སྲོལ་ཡོད་རུང་ དེང་སང་ཁ་སྐད་ཟུར་ཉམས་འདི་མཚམས་བྲག་མགོན་པ་ཟེར་ རྗེ་མི་ལ་འདི་ཁ་བཞུགས་ནི་སྦེ་ ཕྱི་རུ་དགུང་ཞག་ ད་ལྟོ་ཡོད་པའི་ རྡོབ་རྗི་རྫོང་ཡོད་སར་ལུས་སོང་ནུག དེ་ལས་དེའི་ནངས་པ་ ཉི་མའི་རྩེ་དང་མཉམ་ བཞུགས་སུ་གསོལ་ཟེར་ཞུ་པའི་ཚེ་ བཞུགས་མ་ཚུག་པ་ སྤོ་ནི་འབདཝ་ད་ རྗེ་བཙུན་གྱི་ཞལ་ལས་ ལུང་བསྟན་འདི་ནང་ཡོོོད་པའི་སྐོར་ གསུངས་ནུག   ད་ལྟོ་བར་ནང་ཡང་ ཞལ་མཚམས་བྲག་མགོན་པ་ ཁ་ཐུག་ལུ་གཟིགས་ས་མཇལ་ནི་ཡོད།  རྡོབ་རྗི་ཟེར་མི་འདི་ཡང་ ཁ་ཟུར་ཉམས་ཡར་སོངཔ་སྦེ་བཤད་ནི་འདུག  ངོ་མ་སྦེ་ཅིན་ རྗེ་བཙུན་གྱི་རྡོག་པའམ་ ཞབས་རྡོ་གུ་བགྲད་འདི་ བཞུགས་ཡོད་པའི་རྒྱུ་མཚན་ལུ་རྟེན་  འདི་ཁའི་མཚན་  རྡོག་བགྲད་རྫོང་ཟེར་ ཞུཝ་ཨིན། རྡོག་ཟེར་མི་ ཞེ་སའི་ཐོག་ལས་ཞུ་བའི་བརྡ་དང་ གལ་སྲིད་མ་སྦྱར་བ་ཅིན་  ཆོས་སྐད་ནང་ལས་རྐངམ་ལུ་གོཝ་ཨིན།
+
+[[Category:སྤ་རོ་རྫོང་ཁག]]
