*Empty MediaWiki Message*

--- a/འཇིགས་མེད་འོད་ཟེར་ཕྲིན་ལས།.mw
+++ b/འཇིགས་མེད་འོད་ཟེར་ཕྲིན་ལས།.mw
@@ -1,5 +1,4 @@
-
-
+[[File:Jigme Thinley (cropped).jpg|thumb|འཇིགས་མེད་འོད་ཟེར་ཕྲིན་ལས།]]
 ''' བློན་པོ་ འཇིགས་མེད་ འོད་ཟེར་ཕྲིན་ལས། '''
 
 མི་རྗེ་ བློན་པོ་ མཆོག་ སྤྱི་ལོ་ [[༡༩༥༢]] ལུ་ བུམ་ཐང་ལུ་ སྐུ་འཁྲུངས་ཡོདཔ་དང་ ཀ་ལིམ་པོང་ལུ་ཡོད་པའི་ ཌི་ཨར་ ག་ར་ཧམསི་ ཧོམསི་ ནང་ལས་སྐུ་ཡོན་སྦྱང་ནི་འགོ་བཙུགས་གནང་ཏེ་ སེནཏ་ ཨིསི་ཊེ་ཕེནི་་སློབ་གྲྭ་ནང་ལས་ མཐོ་རིམ་སྐུ་ཡོན་ མཐར་འཁྱོལ་གནང་ནུག། དེའི་ཤུལ་ལས་ ཡུ་ཨེསི་ཨེ་ གི་ པེན་ ཨིསི་ཊེཊ་ གཙུག་ལག་སློབ་སྡེ་ནང་ལས་ མི་མང་བདག་སྐྱོང་ནང་ གཙུག་ལག་མཐོ་རིམ་སྐུ་ཡོན་མཐར་འཁྱོལ་ཞིནམ་ལས་ གཞི་གཡོག་ནང་འགོ་དང་པ་ ༡༩༧༤ ལུ་ འཛུལ་བཞུགས་གནང་བའི་ཤུལ་ལུ་ མི་ལོ་ ༣༤ གི་རིང་ལུ་ ལྷན་ཁག་དང་ལས་ཁུངས་ ལེ་ཤ་ཅིག་ནང་ ཕྱག་ལཱ་གནང་ནུག། བློན་པོ་མཆོག་ རྒྱལ་གཞུང་གཞི་གཡོག་ལྷན་ཚོགས་ཀྱི་འགོ་དཔོན་དང་ ཤེས་རིག་ལྷན་ཁག་གི་ མདོ་ཆེན་ ནིའུ་ཡོཀ་ལུ་ཡོད་པའི་ འཛམ་གླིང་སྤྱི་ཚོགས་ནང་ འབྲུག་གི་སྐུ་ཚབ་ ཨིནམ་དང་ སྤྱི་ལོ་ ༡༩༨༧ ལུ་ མི་རྗེ་བློན་པོ་མཆོག་ལུ་ མི་དབང་འབྲུག་རྒྱལ་བཞི་པ་མཆོག་གིས་ བུ་རས་ དམརཔོ་གནང་ཡོདཔ་དང་ ༡༩༩༤ ལུ་ ཇེ་ནི་བ་ལུ་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་གཏན་རྒྱགས་ཀྱི་ སྐུ་ཚབ་སྦེ་བཀོད་གནང་ནུག། སྤྱི་ལོ་ ༡༩༩༨ ལུ་ རྒྱལ་ཡོངས་ཚོགས་འདུ་ཆེན་མོ་ནང་ལས་ ཕྱི་འབྲེལ་བློན་པོ་སྦེ་བཙག་འཐུ་གནང་ཡོདཔ་དང་ སྤྱི་ལོ་ ༡༩༩༩ ལུ་ བློན་པོ་མཆོག་ མི་དབང་འབྲུག་རྒྱལ་བཞི་པ་མཆོག་གིས་ འབྲུག་ཐུགས་སྲས་དང་ ཁྲི་མངའ་གསོལ་གྱི་རྟགས་མ་གནང་ནུག།
