--- a/༢༠༢༠.mw
+++ b/༢༠༢༠.mw
@@ -1,5 +1,3 @@
-
-
 == དབུ་ཁྲིད་ཀྱི་གོ་འཕང༌། ==
 * [[མི་དབང་རྒྱལཔོ།]] : [[འཇིགས་མེད་ཁེ་སར་རྣམ་རྒྱལ་དབང་ཕྱུག]]
 * [[སྲིད་བློན།]] :
@@ -11,3 +9,5 @@
 == འཆི་བ། ==
 
 == ཁ་སྐོང༌། ==
+
+[[Category:ལོ་གྲངས]]
