--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -55,51 +55,51 @@ The following is the list of all countries.<nowiki>*</nowiki><ref>list of all co
 
 === C ===
 * '''[[ཀམ་བོ་ཌི་ཡ་]]''' – Kingdom of Cambodia
-* '''[[Cameroon]]''' – Republic of Cameroon
+* '''[[ཁ་མེ་རོན་]]''' – Republic of Cameroon
 * '''[[ཀེ་ན་ཌ]]''' – Canada
-* '''[[Cape Verde]]''' – Republic of Cape Verde
-* [[Cayman Islands]] (''UK overseas territory'')
-* '''[[Central African Republic]]'''
-* '''[[Chad]]''' – Republic of Chad
+* '''[[ཁ་བྷོ་ཝེར་ཏེ་]]''' – Republic of Cape Verde
+* [[ཁེ་མུན་གླིང་ཚོམ་]] – Cayman Islands (''UK overseas territory'')
+* '''[[དབུས་ཨ་ཧྥི་རི་ཁ་སྤྱི་མཐུན་]]''' – Central African Republic
+* '''[[ཆ་ཌ་]]''' – Republic of Chad
 * '''[[ཅི་ལེ]]''' – Republic of Chile
 * '''[[ཀྲུང་ཀོ]]''' – People's Republic of China ([[རྒྱ་ནག]] - China ?)
 * [[Christmas Island]] – Territory of Christmas Island (''Australian overseas territory'')
 * [[Cocos (Keeling) Islands]] – Territory of Cocos (Keeling) Islands (''Australian overseas territory'')
 * '''[[ཀོ་ལོམ་བི་ཡ]]''' – Republic of Colombia
-* '''[[Comoros]]''' – Union of the Comoros
-* '''[[Democratic Republic of the Congo]]''' – Democratic Republic of the Congo.
-* '''[[Republic of the Congo]]''' – Republic of the Congo.
-* [[Cook Islands]] (''Associated state of New Zealand'')
+* '''[[ཁོ་མོ་རོ་སུ་]]''' – Union of the Comoros
+* '''[[ཁོན་གོ་མི་དམངས་དམངས་གཙོ་]]''' – Democratic Republic of the Congo
+* '''[[ཁོན་གོ་སྤྱི་མཐུན་རྒྱལ་ཁབ་]]''' – Republic of the Congo
+* [[ཁོ་ཁེ་གླིང་ཕྲན་རྒྱལ་ཁབ་]] – Cook Islands (''Associated state of New Zealand'')
 * '''[[ཀོ་ས྄ཊ་རི་ཀ]]''' – Republic of Costa Rica
-* '''[[Côte d'Ivoire]]''' – Republic of Côte d'Ivoire
+* '''[[བ་སོ་མཚོ་ཁ་]]''' – Republic of Côte d'Ivoire
 * '''[[ཀུརོ་ཤི་ཡ]]''' – Republic of Croatia
 * '''[[ཀིའུ་སྦ]]''' – Republic of Cuba
-* '''[[Cyprus]]''' – Republic of Cyprus<ref>See also [[#N|Northern Cyprus]].</ref>
-* '''[[ཅེཀ་རི་པབ་ལིཀ་]]''' – Czech Republic.
+* '''[[སེབ་རུ་སི་]]''' – Republic of Cyprus<ref>See also [[#N|Northern Cyprus]].</ref>
+* '''[[ཅེཀ་རི་པབ་ལིཀ་]]''' – Czech Republic
 
 === D ===
 * '''[[ཌེན་མཱཀ]]''' – Kingdom of Denmark
-* '''[[Djibouti]]''' – Republic of Djibouti
-* '''[[Dominica]]''' – Commonwealth of Dominica
-* '''[[Dominican Republic]]'''
+* '''[[གཞི་བྷོ་ཊི་]]''' – Republic of Djibouti
+* '''[[ཌོ་མི་ནི་ཀ་]]''' – Commonwealth of Dominica
+* '''[[Dominican Republic]]''' – Dominican Republic
 
 === E ===
-* '''[[East Timor]]''' – Democratic Republic of Timor-Leste
-* '''[[Ecuador]]''' – Republic of Ecuador
+* '''[[ཤར་ཊི་མོར་]]''' – Democratic Republic of Timor-Leste
+* '''[[ཨེ་ཁོའོ་ཌོར་]]''' – Republic of Ecuador
 * '''[[ཨི་ཇིཔཊ]]''' – Arab Republic of Egypt
-* '''[[El Salvador]]''' – Republic of El Salvador
-* '''[[Equatorial Guinea]]''' – Republic of Equatorial Guinea
-* '''[[Eritrea]]''' – State of Eritrea
+* '''[[ཨིལ་སལ་ཝ་ཌོར་]]''' – Republic of El Salvador
+* '''[[ཨི་ཁཱ་ཊོ་རལ་དགེ་ནེ་]]''' – Republic of Equatorial Guinea
+* '''[[ཨི་རི་ཏྲའ་]]''' – State of Eritrea
 * '''[[ཨིསི་ཊོ་ནི་ཡ]]''' – Republic of Estonia
-* '''[[Ethiopia]]''' – Federal Democratic Republic of Ethiopia
+* '''[[ཨི་ཐོ་པེ་ཡ་]]''' – Federal Democratic Republic of Ethiopia
 
 === F ===
-* [[Falkland Islands]] (''UK overseas territory'')<ref>[[Falkland Islands]] is also claimed by [[Argentina]] as [[Malvinas|Islas Malvinas]].</ref>
-* [[Faroe Islands]] (''Self-governing country in the Kingdom of Denmark'')
-* '''[[Fiji]]''' – Republic of the Fiji Islands
+* [[ཧྥོ་ཁི་ལན་ཌི་གླིང་ཚོམ་]] – Falkland Islands (''UK overseas territory'')<ref>[[Falkland Islands]] is also claimed by [[Argentina]] as [[Malvinas|Islas Malvinas]].</ref>
+* [[Faroe Islands]] – Faroe Islands (''Self-governing country in the Kingdom of Denmark'')
+* '''[[ཧྥི་ཇི་]]''' – Republic of the Fiji Islands
 * '''[[ཕིན་ལེནཌ]]''' – Republic of Finland
 * '''[[ཕརཱནས]]''' – French Republic
-* [[French Polynesia]] (''French overseas collectivity'')
+* [[ཧྥ་རན་སིའི་ཕོ་ལི་ནེ་ཤི་ཡ་]] – French Polynesia (''French overseas collectivity'')
 
 === G ===
 * '''[[གྷེ་བྷོན]]''' – Gabonese Republic
@@ -107,31 +107,31 @@ The following is the list of all countries.<nowiki>*</nowiki><ref>list of all co
 * '''[[ཇཽ་ཇཱ]]''' – Republic of Georgia<ref>See also [[#ཨ|Abkhazia]] and [[#S|South Ossetia]].</ref>
 * '''[[ཇཱར་མ་ནི]]''' – Federal Republic of Germany
 * '''[[གྷ་ན]]''' – Republic of Ghana
-* [[Gibraltar]] (''UK overseas territory'')
+* [[Gibraltar]] – Gibraltar (''UK overseas territory'')
 * '''[[གྲྀས]]''' (Greece) – Hellenic Republic
-* [[Greenland]] (''Self-governing country in the Kingdom of Denmark'')
+* [[གྷི་རིན་ལན་ཌི་]] – Greenland (''Self-governing country in the Kingdom of Denmark'')
 * '''[[གྲྀ་ན་ཌ]]''' – Grenada
-* [[Guam]] – Territory of Guam (''US organized territory'')
-* '''[[Guatemala]]''' – Republic of Guatemala
+* [[སྒའམ་]] – Territory of Guam (''US organized territory'')
+* '''[[སྒོ་ཊེ་མ་ལ]]''' – Republic of Guatemala
 * [[Guernsey]] – Bailiwick of Guernsey (''British Crown dependency'')<ref>The [[Guernsey|Bailiwick of Guernsey]] includes its self-governing dependencies [[Alderney]], [[Herm]] and [[Sark]].</ref>
-* '''[[Guinea]]''' – Republic of Guinea
-* '''[[Guinea-Bissau]]''' – Republic of Guinea-Bissau
-* '''[[Guyana]]''' – Co-operative Republic of Guyana
+* '''[[སྒེ་ནི་ཡ་]]''' – Republic of Guinea
+* '''[[སྒེ་ནི་ཡ་བྷེ་སོ་]]''' – Republic of Guinea-Bissau
+* '''[[གྷུ་ཡ་ན་]]''' – Co-operative Republic of Guyana
 
 === H ===
 * '''[[ཧའི་ཏི]]''' – Republic of Haiti
-* '''[[Honduras]]''' – Republic of Honduras
-* [[ཧོང་ཀོང]] – Hong Kong Special Administrative Region of the People's Republic of China (''Area of special sovereignty'').
-* '''[[Hungary]]''' – Republic of Hungary
+* '''[[ཧོན་ཏུ་ར་སུ་]]''' – Republic of Honduras
+* [[ཧོང་ཀོང]] – Hong Kong Special Administrative Region of the People's Republic of China (''Area of special sovereignty'')
+* '''[[ཧུང་གྷ་རི་]]''' – Republic of Hungary
 
 === I ===
 * '''[[ཨའིསི་ལེནཌ་]]''' – Republic of Iceland
 * '''[[རྒྱ་གར]]''' – Republic of India
-* '''[[Indonesia]]''' – Republic of Indonesia
+* '''[[ཨིན་རྡུ་ནི་ཤིས་ཡ་]]''' – Republic of Indonesia
 * '''[[ཨི་རཱན]]''' – Islamic Republic of Iran
 * '''[[ཨི་རཀ]]''' – Republic of Iraq
-* '''[[ཨའིརི་ལེནཌ]]''' - Republic of Ireland.
-* [[Isle of Man]] (''British Crown dependency'')
+* '''[[ཨའིརི་ལེནཌ]]''' – Republic of Ireland
+* [[Isle of Man]] – Isle of Man (''British Crown dependency'')
 * '''[[ཨིཛ་རཱེལ]]''' – State of Israel
 * '''[[ཨྀཊ་ལི]]''' – Italian Republic
 
@@ -142,170 +142,170 @@ The following is the list of all countries.<nowiki>*</nowiki><ref>list of all co
 * '''[[ཇོར་ཌན]]''' – Hashemite Kingdom of Jordan
 
 === K ===
-* '''[[Kazakhstan]]''' – Republic of Kazakhstan
+* '''[[ཧ་སག་]]''' – Republic of Kazakhstan
 * '''[[ཀེ་ནི་ཡ]]''' – Republic of Kenya
-* '''[[Kiribati]]''' – Republic of Kiribati
+* '''[[ཀི་རི་བྷ་ཏི་]]''' – Republic of Kiribati
 * '''[[བྱང་ཀོ་རི་ཡ་]]''' – ཀོ་རི་ཡ། མི་སེར་དམངས་གཙོའི་རྒྱལ་ཁབ།   North Korea
 * '''[[ལྷོ་ཀོ་རི་ཡ]]''' – Republic of Korea
-* '''''[[Kosovo]]''''' – Republic of Kosovo
+* '''''[[ཁོ་སོ་ཝོ་]]''''' – Republic of Kosovo
 * '''[[ཀུ་ཝེཊ]]''' – State of Kuwait
-* '''[[Kyrgyzstan]]''' – Kyrgyz Republic<ref>[[Kyrgyzstan]] is also sometimes rendered as Kirghizia.</ref>
+* '''[[ཁུར་དགེ་སུ་ཏན་]]''' – Kyrgyz Republic<ref>[[Kyrgyzstan]] is also sometimes rendered as Kirghizia.</ref>
 
 === L ===
-* '''[[Laos]]''' – Lao People's Democratic Republic
+* '''[[ལའོ་སུ་]]''' – Lao People's Democratic Republic
 * '''[[ལེཊི་བི་ཡ]]''' – Republic of Latvia
 * '''[[ལེ་བཱ་ནཱོན་]]''' – Republic of Lebanon
-* '''[[Lesotho]]''' – Kingdom of Lesotho
-* '''[[Liberia]]''' – Republic of Liberia
-* '''[[Libya]]''' – Great Socialist People's Libyan Arab Jamahiriya
-* '''[[Liechtenstein]]''' – Principality of Liechtenstein
+* '''[[ལེ་སོ་ཐོ་]]''' – Kingdom of Lesotho
+* '''[[ལི་བྷེ་རི་ཡ་]]''' – Republic of Liberia
+* '''[[ལི་བྷི་ཡ་]]''' – State of Libya
+* '''[[ལེ་ཆུ་ཏན་སི་ཏུན་]]''' – Principality of Liechtenstein
 * '''[[ལི་ཐུ་ནི་ཡ]]''' – Republic of Lithuania
-* '''[[Luxembourg]]''' – Grand Duchy of Luxembourg
+* '''[[ལེགས་སུམ་བྷེར་]]''' – Grand Duchy of Luxembourg
 
 === M ===
 * [[Macao]] – Macao Special Administrative Region of the [[People's Republic of China]] (''Area of special sovereignty'')
-* '''[[Macedonia]]''' – Republic of Macedonia<ref>Also known as the former Yugoslav Republic of Macedonia.</ref>
-* '''[[Madagascar]]''' – Republic of Madagascar
-* '''[[Malawi]]''' – Republic of Malawi
+* '''[[མ་སེ་ཌོ་ནི་ཡ་]]''' – Republic of North Macedonia<ref>Also known as the former Yugoslav Republic of Macedonia.</ref>
+* '''[[མ་ད་གཱ་སི་ཀར་]]''' – Republic of Madagascar
+* '''[[མ་ལ་ཝེ་]]''' – Republic of Malawi
 * '''[[མ་ལེ་ཤི་ཡ]]''' – Malaysia
-* '''[[Maldives]]''' – Republic of Maldives
-* '''[[Mali]]''' – Republic of Mali
-* '''[[Malta]]''' – Republic of Malta
-* '''[[Marshall Islands]]''' – Republic of the Marshall Islands
-* '''[[Mauritania]]''' – Islamic Republic of Mauritania
+* '''[[མལ་དི་ཝེ་སུ་]]''' – Republic of Maldives
+* '''[[མ་ལི་]]''' – Republic of Mali
+* '''[[མལ་ཏ་]]''' – Republic of Malta
+* '''[[མར་ཤལ་གླིང་ཕྲན་རྒྱལ་ཁབ་]]''' – Republic of the Marshall Islands
+* '''[[མ་རི་ཏ་ནི་ཡ་]]''' – Islamic Republic of Mauritania
 * '''[[མའུ་རི་ཤི་ཡཱསི]]''' – Republic of Mauritius
 * [[Mayotte]] – Departmental Collectivity of Mayotte (''French overseas collectivity'')
 * '''[[མེཀ་སི་ཀོ]]''' – United Mexican States
-* '''[[Micronesia]]''' – Federated States of Micronesia
-* '''[[Moldova]]''' – Republic of Moldova<ref>See also [[#T|Transnistria]].</ref>
-* '''[[Monaco]]''' – Principality of Monaco
-* '''[[སོག་པོ་]]''' - Republic of Mongolia
-* '''[[Montenegro]]''' – Republic of Montenegro
-* [[Montserrat]] (''[[UK]] overseas territory'')
+* '''[[མེ་ཁུ་རི་ནེ་ཞི་ཡ་]]''' – Federated States of Micronesia
+* '''[[མོལ་དོ་ཝ་]]''' – Republic of Moldova<ref>See also [[#T|Transnistria]].</ref>
+* '''[[མོ་ནཱ་ཁོ་]]''' – Principality of Monaco
+* '''[[སོག་པོ་]]''' – Republic of Mongolia
+* '''[[མོན་ཊེ་ནིག་རོ་]]''' – Republic of Montenegro
+* [[མོན་ཚུ་ར་ཊི་]] – Montserrat (''[[UK]] overseas territory'')
 * '''[[མོ་རོ་ཀོ]]''' – Kingdom of Morocco<ref>See also [[#W|Western Sahara]].</ref>
-* '''[[Mozambique]]''' – Republic of Mozambique
+* '''[[མོ་སམ་བྷི་ཁུ་]]''' – Republic of Mozambique
 * '''[[མེ་མར་]]''' – Union of Myanmar
 
 === N ===
-* '''''[[Nagorno-Karabakh]]''''' – Nagorno-Karabakh Republic.
-* '''[[Namibia]]''' – Republic of Namibia
-* '''[[Nauru]]''' – Republic of Nauru
-* '''[[བལ་ཡུལ]]''' – State of Nepal
-* '''[[ནེ་དར་ལེནཌསི་]]''' – Kingdom of the Netherlands.
+* '''''[[Nagorno-Karabakh]]''''' – Nagorno-Karabakh Republic
+* '''[[ན་མི་བྷི་ཡ་]]''' – Republic of Namibia
+* '''[[ནའུ་རུ་]]''' – Republic of Nauru
+* '''[[བལ་ཡུལ]]''' – Federal Democratic Republic of Nepal
+* '''[[ནེ་དར་ལེནཌསི་]]''' – Kingdom of the Netherlands
 * [[Netherlands Antilles]] (''Self-governing country in the [[Kingdom of the Netherlands]]'')
-* [[New Caledonia]] – Territory of New Caledonia and Dependencies (''French community sui generis'')
+* [[ཁ་ལི་ཌོ་ནི་ཡ་གསར་པ་]] – Territory of New Caledonia and Dependencies (''French community sui generis'')
 * '''[[ནིའུ་ཛི་ལེནཌ་]]''' – New Zealand
-* '''[[Nicaragua]]''' – Republic of Nicaragua
-* '''[[Niger]]''' – Republic of Niger
-* '''[[Nigeria]]''' – Federal Republic of Nigeria
-* [[Niue]] (''Associated state of New Zealand'')
-* [[Norfolk Island]] – Territory of Norfolk Island (''Australian overseas territory'')
-* '''''[[Northern Cyprus]]''''' – Turkish Republic of Northern Cyprus.
-* [[Northern Mariana Islands]] – Commonwealth of the Northern Mariana Islands (''US commonwealth'')
+* '''[[ནེ་ཁུ་ར་གི་ཝ་]]''' – Republic of Nicaragua
+* '''[[ནེ་ལྗུར་]]''' – Republic of Niger
+* '''[[ནེ་ལྗུ་རི་ཡ་]]''' – Federal Republic of Nigeria
+* [[ནིའུ་]] – Niue (''Associated state of New Zealand'')
+* [[ནོར་ཧྥུ་ཁི་གླིང་ཕྲན་]] – Territory of Norfolk Island (''Australian overseas territory'')
+* '''''[[Northern Cyprus]]''''' – Turkish Republic of Northern Cyprus
+* [[བྱང་མ་རི་ན་གླིང་ཚོམ་]] – Commonwealth of the Northern Mariana Islands (''US commonwealth'')
 * '''[[ནོ་ཝེ་]]''' – Kingdom of Norway
 
 === O ===
-* '''[[Oman]]''' – Sultanate of Oman.
+* '''[[ཨོ་མན་]]''' – Sultanate of Oman
 
 === P ===
-* '''[[Pakistan]]''' – Islamic Republic of Pakistan
-* '''[[Palau]]''' – Republic of Palau
-* '''''[[Palestine]]''''' – Occupied Palestinian Territories.
-* '''[[Panama]]''' – Republic of Panama.
-* '''[[Papua New Guinea]]''' – Independent State of Papua New Guinea
+* '''[[པ་ཀི་སི་སྟན་]]''' – Islamic Republic of Pakistan
+* '''[[པ་ལའུ་]]''' – Republic of Palau
+* '''''[[པ་ལི་སི་ཏན་]]''''' – Occupied Palestinian Territories
+* '''[[པ་ན་མ་]]''' – Republic of Panama
+* '''[[ཕ་པོས་དགེ་ནས་གསར་པ་]]''' – Independent State of Papua New Guinea
 * '''[[པ་ར་གུ་ཝའི]]''' – Republic of Paraguay
-* '''[[Peru]]''' – Republic of Peru
-* '''[[Philippines]]''' – Republic of the Philippines
-* [[Pitcairn Islands]] – Pitcairn, Henderson, Ducie, and Oeno Islands (''UK overseas territory'')
+* '''[[པེ་རུ་]]''' – Republic of Peru
+* '''[[ཧྤེ་ལི་པིན་]]''' – Republic of the Philippines
+* [[པེ་ཊི་ཁིན་གླིམ་ཚོམ་]] – Pitcairn, Henderson, Ducie, and Oeno Islands (''UK overseas territory'')
 * '''[[པོ་ལེནཌི]]''' – Republic of Poland
 * '''[[པོར་ཅུ་གལ་]]''' – Portuguese Republic
-* [[Puerto Rico]] – Commonwealth of Puerto Rico (''US commonwealth'')
+* [[ཕོར་ཏོ་གྲུ་ཁ་]] – Commonwealth of Puerto Rico (''US commonwealth'')
 
 === Q ===
 * '''[[ཀ་ཏར་]]''' – State of Qatar
 
 === R ===
-* '''[[Romania]]'''
+* '''[[རོ་མ་ནི་ཡ་]]''' – Romania
 * '''[[ར་ཤི་ཡཱན་ཕེ་ཌི་རེ་ཤཱན]]''' – Russia ([[ར་ཤི་ཡཱན་ ཕེ་ཌི་རེ་􀭺ཱན]] - Russian Federation)
-* '''[[Rwanda]]''' – Republic of Rwanda
+* '''[[རོ་ཨན་ཌ]]''' – Republic of Rwanda
 
 === S ===
-* [[Saint Barthélemy]] – Collectivity of Saint Barthélemy (''French overseas collectivity'')
-* [[Saint Helena]] (''[[UK]] overseas territory'')
-* '''[[Saint Kitts and Nevis]]''' – Federation of Saint Christopher and Nevis
-* '''[[Saint Lucia]]'''
-* [[Saint Martin]] – Collectivity of Saint Martin (''French overseas collectivity'')
-* [[Saint Pierre and Miquelon]] – Territorial Collectivity of Saint Pierre and Miquelon (''French overseas collectivity'')
-* '''[[Saint Vincent and the Grenadines]]'''
-* '''[[Samoa]]''' – Independent State of Samoa
-* '''[[San Marino]]''' – Most Serene Republic of San Marino
-* '''[[São Tomé and Príncipe]]''' – Democratic Republic of São Tomé and Príncipe
+* [[དམ་པ་བྷར་ཐུལ་མེ་]] – Collectivity of Saint Barthélemy (''French overseas collectivity'')
+* [[Saint Helena]] – Saint Helena (''[[UK]] overseas territory'')
+* '''[[སཱན་ཊ་ཀི་ཊ་སུ་དང་ནེ་བེེ་སུ་（དམ་པ་ཀི་ཊ་དང་ནེ་བེེ་སུ་）]]''' – Federation of Saint Christopher and Nevis
+* '''[[སེན་ཊ་ལུ་ཤི་ཡ་]]''' – Saint Lucia
+* [[དམ་པ་མ་ཏུན་]] – Collectivity of Saint Martin (''French overseas collectivity'')
+* [[དམ་པ་ཕེར་དང་མེ་ཁོ་ལོན་]] – Territorial Collectivity of Saint Pierre and Miquelon (''French overseas collectivity'')
+* '''[[དམ་པ་ཝེན་སིན་དང་གྷུ་རེ་ན་ཀྲུན་]]''' – Saint Vincent and The Grenadines
+* '''[[སོ་མོ་ཝ་]]''' – Independent State of Samoa
+* '''[[སན་མ་རི་ནོ་]]''' – Most Serene Republic of San Marino
+* '''[[སའོ་ཊོ་མེ་དང་ཕུ་རིན་སེབ་]]''' – Democratic Republic of São Tomé and Príncipe
 * '''[[སའུ་དི་ཨེ་ར་སྦི་ཡ་]]''' – Kingdom of Saudi Arabia
-* '''[[Senegal]]''' – Republic of Senegal
-* '''[[Serbia]]''' – Republic of Serbia<ref>See also [[#K|Kosovo]] - under [[UN]] administration.</ref>
-* '''[[Seychelles]]''' – Republic of Seychelles
-* '''[[Sierra Leone]]''' – Republic of Sierra Leone
-* '''[[Singapore]]''' – Republic of Singapore
-* '''[[Slovakia]]''' – Slovak Republic
-* '''[[Slovenia]]''' – Republic of Slovenia
-* '''[[Solomon Islands]]'''
-* '''[[Somalia]]'''<ref>[[Somalia]] is presently fragmented with its [[Transitional Federal Parliament|Transitional National Government]]</ref>
-* '''''[[Somaliland]]''''' – Republic of Somaliland.
+* '''[[སི་ནེ་གྷལ་]]''' – Republic of Senegal
+* '''[[སེར་བྷི་ཡ་]]''' – Republic of Serbia<ref>See also [[#K|Kosovo]] - under [[UN]] administration.</ref>
+* '''[[སེ་ཆེ་ལེ་སུ་]]''' – Republic of Seychelles
+* '''[[སི་ར་ལེ་ཨོན་]]''' – Republic of Sierra Leone
+* '''[[སེང་གེ་ཕོར་]]''' – Republic of Singapore
+* '''[[སི་ལོ་ཝ་ཁི་]]''' – Slovak Republic
+* '''[[སི་ལོ་ཝེ་ནི་ཡ་]]''' – Republic of Slovenia
+* '''[[སོ་ལོ་མོན་གླིང་ཚོམ་]]''' – Solomon Islands
+* '''[[སོ་མ་ལི་ཡ་]]'''<ref>[[Somalia]] is presently fragmented with its [[Transitional Federal Parliament|Transitional National Government]]</ref>
+* '''''[[Somaliland]]''''' – Republic of Somaliland
 * '''[[སའུཐ་ཨཕ་རི་ཀ་]]''' – Republic of South Africa
-* '''''[[South Ossetia]]''''' – Republic of South Ossetia.
+* '''''[[South Ossetia]]''''' – Republic of South Ossetia
 * '''[[སིཔཱེན་]]''' – Kingdom of Spain
 * '''[[ཤྲཱྀ་ལངཀ་]]''' – Democratic Socialist Republic of Sri Lanka
-* '''[[Sudan]]''' – Republic of the Sudan
-* '''[[Suriname]]''' – Republic of Suriname
+* '''[[སུའུ་ཏན་]]''' – Republic of the Sudan
+* '''[[སུ་རི་ནེམ་]]''' – Republic of Suriname
 * [[Svalbard]] (''Territory of Norway'')<ref>[[Svalbard]] is an overseas territory of [[Norway]] recognized by international treaty.</ref>
-* '''[[Swaziland]]''' – Kingdom of Swaziland
+* '''[[སི་ཝ་ཟི་ལན་ཌི་]]''' – Kingdom of Eswatini
 * '''[[སུའི་ཌན་]]''' – Kingdom of Sweden
 * '''[[སུའིཊ་ཛར་ལེན་]]''' – Swiss Confederation
-* '''[[Syria]]''' – Syrian Arab Republic
+* '''[[སི་རི་ཡ་]]''' – Syrian Arab Republic
 
 === T ===
 * '''[[ཏའི་ཝཱན་]]''' – Republic of China (Taiwan)
 * '''[[ཏ་ཇག་ཀིསི་ཏཱན་]]''' – Republic of Tajikistan
-* '''[[Tanzania]]''' – United Republic of Tanzania
+* '''[[ཏན་ཛ་ནི་ཡ]]''' – United Republic of Tanzania
 * '''[[ཐཱའི་ལེནཌ་]]''' – Kingdom of Thailand
 * '''[[Togo]]''' – Togolese Republic
-* [[Tokelau]] (''Overseas territory of New Zealand'')
-* '''[[Tonga]]''' – Kingdom of Tonga
+* [[ཊོ་ཁི་ལོ]] – Tokelau (''Overseas territory of New Zealand'')
+* '''[[ཁྲོན་དགའ]]''' – Kingdom of Tonga
 * '''''[[Transnistria]]''''' – Transnistrian Moldovan Republic.
-* '''[[Trinidad and Tobago]]''' – Republic of Trinidad and Tobago
-* [[Tristan da Cunha]] (''Dependency of the UK overseas territory of Saint Helena'')
-* '''[[Tunisia]]''' – Tunisian Republic
+* '''[[ཏྲི་ནི་ཊ་དང་ཏྲོ་བྷ་གོ]]''' – Republic of Trinidad and Tobago
+* [[Tristan da Cunha]] – Tristan da Cunha (''Dependency of the UK overseas territory of Saint Helena'')
+* '''[[ཁྲོ་ནི་སི་ཡཱ་]]''' – Tunisian Republic
 * '''[[བྱའི་རིགས་ཅིག]]''' – Republic of Turkey
-* '''[[Turkmenistan]]'''
-* [[Turks and Caicos Islands]] (''UK overseas territory'')
-* '''[[Tuvalu]]'''
+* '''[[ཏུར་ཀ་མེ་ནི་སུ་ཏན་]]''' – Turkmenistan
+* [[ཏུར་ཀེ་དང་ཁེ་ཁོ་སིན་གླིང་ཚོམ་]] – Turks and Caicos Islands (''UK overseas territory'')
+* '''[[ཏོས་བ་ལུང་]]''' – Tuvalu
 
 === U ===
-* '''[[Uganda]]''' – Republic of Uganda
-* '''[[Ukraine]]'''
+* '''[[ཡོས་གན་རྡ]]''' – Republic of Uganda
+* '''[[ཨོ་ཁི་རན]]''' – Ukraine
 * '''[[ཡུ་ནའི་ཊེཊ་ཨ་རབ་ཨེ་མི་རེཊསི་]]''' – United Arab Emirates
 * '''[[ཡུ་ནའི་ཊེཊ་ཀིང་ཌམ]]''' – United Kingdom of Great Britain and Northern Ireland
 * '''[[ཡུ་ནའིཊེཊ་སི་ཊེས]]''' – United States of America
-* '''[[Uruguay]]''' – Eastern Republic of Uruguay
+* '''[[ཤར་ཨོ་རག་ཝེ]]''' – Eastern Republic of Uruguay
 * '''[[ཨུཛ་བེ་ཀིསི་ཏཱན་]]''' – Republic of Uzbekistan
 
 === V ===
-* '''[[Vanuatu]]''' – Republic of Vanuatu
-* '''[[བ་ཊི་ཀཱན་]]''' – State of the Vatican City.
-* '''[[Venezuela]]''' – Bolivarian Republic of Venezuela
-* '''[[Vietnam]]''' – Socialist Republic of Vietnam
-* [[British Virgin Islands|Virgin Islands, British]] – British Virgin Islands (''UK overseas territory'')
+* '''[[ཝ་ནུ་ཨ་ཏོ]]''' – Republic of Vanuatu
+* '''[[བ་ཊི་ཀཱན་]]''' – State of the Vatican City
+* '''[[ཝེ་ནི་ཙེ་ལ]]''' – Bolivarian Republic of Venezuela
+* '''[[ཝེ་ཏི་ལམ]]''' – Socialist Republic of Vietnam
+* [[དབྱིན་ཇིའི་ཝེར་ལྗིན་གླིང་ཚོམ]] – British Virgin Islands (''UK overseas territory'')
 * [[U.S. Virgin Islands|Virgin Islands, United States]] – United States Virgin Islands (''US organized territory'')
 
 === W ===
-* [[Wallis and Futuna]] – Territory of Wallis and Futuna Islands (''French overseas collectivity'')
-* [[Western Sahara]] - Sahrawi Arab Democratic Republic.
+* [[ཝ་ལེ་སི་དང་ཧྥོ་ཐོ་ཡ]] – Territory of Wallis and Futuna Islands (''French overseas collectivity'')
+* [[Western Sahara]] – Sahrawi Arab Democratic Republic
 
 === Y ===
-* '''[[Yemen]]''' – Republic of Yemen
+* '''[[ཡེ་མན།]]''' – Republic of Yemen
 
 === Z ===
-* '''[[Zambia]]''' – Republic of Zambia
+* '''[[རྫམ་བྷི་ཡ།]]''' – Republic of Zambia
 * '''[[ཛིམ་བབ་ཝེ་]]''' – Republic of Zimbabwe
 
 == Headline text ==
