--- a/འབྲུག་གི་བཟོ་བཀོད་རིག་པ།.mw
+++ b/འབྲུག་གི་བཟོ་བཀོད་རིག་པ།.mw
@@ -17,3 +17,5 @@
 == ཁུངས་གཏུག། ==
 ༡. [http://admin.theiguides.org/Media/Documents/TRADITIONAL-ARCHITECTURE1.pdf/ (n.d.). TRADITIONAL ARCHITECTURE GUIDELINES.] 
 <br/> ༢. [http://pubs.sciepub.com/ajcea/5/3/6/ (2007) A Review on Traditional Architecture Houses in Buddhist Culture. 5(3), 113–123.]
+<br/> (n.d.). A HISTORY OF BHUTAN: Class 10. Royal Education Council (REC). (Original work published 1996)
+‌ <br/> Wangchuk, D. (2016). Foundations of Bhutan History: A Concise Guide (1st ed.). Omega Traders.
