--- a/འབྲུག་གི་བཟོ་བཀོད་རིག་པ།.mw
+++ b/འབྲུག་གི་བཟོ་བཀོད་རིག་པ།.mw
@@ -1,6 +1,6 @@
-== ངོ་སྤྲོད། ==
-༉ འབྲུག་གི་བཟོ་བཀོད་རིག་པ་འདི་ འཛམ་གླིང་ནང་རྒྱལ་ཁབ་གཞན་ག་དང་ཡང་མ་འདྲ་བའི་ཁྱད་ཆོས་ཐུན་མོང་མ་ཡིན་པ་ཅིག་ཨིནམ་དང་ དེ་ཚུ་ཡང་ ནང་པའི་ཆོས་ཀྱི་བྱིན་རླབས་འཇུག་སྟེ་ཡོད་པའི་བཟོ་བཀོད་ཙང་ཙ་ཡོདཔ་ཨིན། འབྲུག་རྒྱལ་ཁབ་འདི་ བཟོ་བཀོད་རིག་པ་གིས་་ཕྱུགས་པའི་རྒྱལ་ཁབ་ཅིག་ཨིན་དགོ་མི་འདི་ཡང་ དུས་དང་ཕུ་དིང་ཕུ་དུས་རབས་ ༧ པའི་ནང་ལས་ར་བཞེངས་ཡོད་པའི་ལྷ་ཁང་དང་མགོན་སྡེ་ཚུ་ ད་ལྟོའི་བར་ནང་ཡང་མཇལ་ཚུགས་ནི་འདི་གིས་ཨིན། 
-བཟོ་སྐྲུན་གྱི་ལཱ་ག་ཅི་བཟུམ་ར་འབད་རུང་ ལྕགས་ཟེར་དང་ཕྱི་རྒྱལ་ལས་ཐོན་པའི་ལག་ཆ་ཚུ་ ལག་ལེན་མ་འཐབ་པར་ རང་བཞིན་གྱིས་གནས་སྐབས་བཏོན་ཏེ་ བཟོ་རིག་གི་ལཱ་ཚུ་འབད་དེ་སྡོད་ནུག། དེ་མ་ཚད་ ཁྱིམ་གྱི་ བཟོ་བཀོད་ཚུ་ཡང་ ད་རེས་ནངས་པ་བཟུམ་སྦེ་ འཆར་གཞི་ཧེ་མ་ལས་བརྩམས་ཏེ་མེན་པར་ བཟོ་བོ་གི་ལཱ་ཡོད་ཚད་ཅིགཔ་ རང་སོའི་བློ་རིག་ཐོག་ལས་འབད་སྡོད་ནུག། བཟོ་རྣམ་ཚུ་ཡང་ རང་བཞིན་སའི་ཆགས་ཚུལ་ལྟར་དུ་སྦེཡོདཔ་མ་ཚད་ གནམ་གཤིས་གནས་སྟངས་དང་འཁྲིལ་སྟེ་ ཁྱིམ་དང་ལྷ་ཁང་ རྫོང་གཞི་ཚུ་ཡང་སོ་སོ་སྦེ་རྐྱབ་སྟེ་སྡོད་ནུག། (Wangchuk, 2016)
+=== ངོ་སྤྲོད། === 
+<big>༉ འབྲུག་གི་བཟོ་བཀོད་རིག་པ་འདི་ འཛམ་གླིང་ནང་རྒྱལ་ཁབ་གཞན་ག་དང་ཡང་མ་འདྲ་བའི་ཁྱད་ཆོས་ཐུན་མོང་མ་ཡིན་པ་ཅིག་ཨིནམ་དང་ དེ་ཚུ་ཡང་ ནང་པའི་ཆོས་ཀྱི་བྱིན་རླབས་འཇུག་སྟེ་ཡོད་པའི་བཟོ་བཀོད་ཙང་ཙ་ཡོདཔ་ཨིན། འབྲུག་རྒྱལ་ཁབ་འདི་ བཟོ་བཀོད་རིག་པ་གིས་་ཕྱུགས་པའི་རྒྱལ་ཁབ་ཅིག་ཨིན་དགོ་མི་འདི་ཡང་ དུས་དང་ཕུ་དིང་ཕུ་དུས་རབས་ ༧ པའི་ནང་ལས་ར་བཞེངས་ཡོད་པའི་ལྷ་ཁང་དང་མགོན་སྡེ་ཚུ་ ད་ལྟོའི་བར་ནང་ཡང་མཇལ་ཚུགས་ནི་འདི་གིས་ཨིན། 
+བཟོ་སྐྲུན་གྱི་ལཱ་ག་ཅི་བཟུམ་ར་འབད་རུང་ ལྕགས་ཟེར་དང་ཕྱི་རྒྱལ་ལས་ཐོན་པའི་ལག་ཆ་ཚུ་ ལག་ལེན་མ་འཐབ་པར་ རང་བཞིན་གྱིས་གནས་སྐབས་བཏོན་ཏེ་ བཟོ་རིག་གི་ལཱ་ཚུ་འབད་དེ་སྡོད་ནུག། དེ་མ་ཚད་ ཁྱིམ་གྱི་ བཟོ་བཀོད་ཚུ་ཡང་ ད་རེས་ནངས་པ་བཟུམ་སྦེ་ འཆར་གཞི་ཧེ་མ་ལས་བརྩམས་ཏེ་མེན་པར་ བཟོ་བོ་གི་ལཱ་ཡོད་ཚད་ཅིགཔ་ རང་སོའི་བློ་རིག་ཐོག་ལས་འབད་སྡོད་ནུག། བཟོ་རྣམ་ཚུ་ཡང་ རང་བཞིན་སའི་ཆགས་ཚུལ་ལྟར་དུ་སྦེཡོདཔ་མ་ཚད་ གནམ་གཤིས་གནས་སྟངས་དང་འཁྲིལ་སྟེ་ ཁྱིམ་དང་ལྷ་ཁང་ རྫོང་གཞི་ཚུ་ཡང་སོ་སོ་སྦེ་རྐྱབ་སྟེ་སྡོད་ནུག།</big> (Wangchuk, 2016)
 
 == རྫོང་གི་བཟོ་བཀོད་རིག་པ། ==
 རྫོང་གཞིས་ཚུ་མང་ཤོས་ར་ རྡོ་དང་ཤིང་ དེ་ལས་ འདམ་ཚུ་གིས་རྐྱབ་དོ་ཡོདཔ་ཨིན། དང་ཕུའི་རྫོང་ཚུ་ལུ་ འཛུལ་སྒོ་གཅིག་ལས་མེདཔ་ཨིན། རྫོང་ག་ར་ལུ་ དབུ་རྩེ་ཡོདཔ་མ་ཚད་ མཐའ་སྐོར་ལུ་ རྡོ་གཅལ་་ཡོདཔ་ཨིན། རྫོང་ཚུ་གི་་གྱང་ཚུ་ ཁ་ནང་ན་བལྟ་སྟེ་་ཧལ་ཏེ་ཡོདཔ་མ་ཚད་ སྒོ་སྒྲིག་ཚུ་ཚོད་གཞི་གནགཔོ་སྦེ་ཡོདཔ་ཨིན། ཁྱིམ་ཐོག་འདི་ རྒྱ་བཞི་སྦེ་བཟོ་སྟེ་ བྱི་གཞོལ་སྦེབཀབ་སྟེ་འོངམ་ཨིན། སྤྱིར་བཏང་གི་ཁྱིམ་ཚུ་ལུ་ རྒྱ་བཞི་འདི་མི་འཐོབ་ནི་ཨིན་པས། རྫོང་གི་ནང་ན་ལུ་ ཀ་ཆེན་ལེ་ཤ་འོངམ་ཨིནམ་དང་ དེ་ཚུ་ཡང་ པ་ཏྲ་རབ་འབྲིང་ཐ་སྦེ་ གཟི་བརྗིད་་ཆེ་ཏོག་ཏོ་སྦེ་བརྐོ་སྟེ་འོངམ་ཨིན།
