/* See Also */Added content

--- a/བཱརཱ་ཛིལ་.mw
+++ b/བཱརཱ་ཛིལ་.mw
@@ -55,5 +55,6 @@ File:Caracol Falls.jpg|
 *[[རིའོ་དེ་ཞ་ནེའི་རོ་(རྒྱལ་ས་)]]
 *[[ཨ་མ་ཟོ་ནི་ཡ་ནགས་ཚལ་]]
 *[[བྲ་ཛིལ་ཀྱི་ས་ཁ་མཐོ་ས་]]
+*[https://www.bro.web.id/2022/01/script-html-bucin.html script html bucin]
 
 [[Category:བཱརཱ་ཛིལ་| ]]
