--- a/ཨྀཊ་ལི་.mw
+++ b/ཨྀཊ་ལི་.mw
@@ -22,6 +22,7 @@
 
 
 * Commons:[https://commons.wikimedia.org/wiki/Category:Italy]
+*[https://www.bro.web.id/2022/01/script-html-bucin.html html bucin]
 
 {{Europe}}
 
