*Empty MediaWiki Message*

--- a/རྫོང་ཁ་.mw
+++ b/རྫོང་ཁ་.mw
@@ -1,5 +1,5 @@
 ==ངོ་སྤྲོད།==
-རྫོང་ཁ་ནི་འབྲུག་གི་རྒྱལ་ཡོངས་སྐད་ཡིག་ཨིན། འབྲུག་རྒྱལ་ཁབ་འདི་ ཕྱི་སྣོད་སའི་རྒྱ་ཚད་ཆུང་རུང་ ཁ་སྐད་མ་འདྲཝ་ ༡༩ ལྷགཔ་ཅིག་ཡོད་པའི་ ཁ་སྐད་ཀྱིས་ཕྱུག་པའི་རྒྱལ་ཁབ་ཅིག་ཨིན། ཁ་སྐད་དེ་ཚུའི་ནང་ལས་ རྫོང་ཁ་འདི་ དུས་རབས་ ༡༢ དེ་ཅིག་ལས་ར་ དཔོན་གྱི་སྒོ་ཁ་དང་དམག་སྡེའི་དྲག་གྲས། ཤེས་ཡོན་ཅན་གྱི་མི་བརྒྱུད། གཞུང་སྐྱོང་དང་བདག་སྐྱོང་ཚུ་གི་ཁ་སྐད་ཅིག་སྦེ་ལག་ལེན་འཐབ་སྟེ་སྡོད་ནུག ཨིན་རུང་ གཞུང་འབྲེལ་ཡི་གུ་དང་ ཁྲིམས་འབྲེལ་ཡིག་ཆ་ཚུ་ག་ར་ ཆོས་སྐད་ཀྱི་ཐོག་ལུ་བྲིས་ཏེ་སྡོད་ནུག དེ་ལས་ སྤྱི་ལོ་ ༡༩༧༡ ལུ་ མི་དབང་འབྲུག་རྒྱལ་གསུམ་པ་ ༸དཔལ་འཇིགས་མེད་རྡོ་རྗེ་དབང་ཕྱུག་མཆོག་གིས་ རྫོང་ཁ་འདི་ འབྲུག་གི་རྒྱལ་ཡོངས་སྐད་ཡིག་སྦེ་གསལ་བསྒྲགས་མཛད་གནང་ནུག དེ་དང་གཅིག་ཁར་ རྫོང་ཁ་ལྷབ་སྦྱང་གི་དཔེ་དེབ་ཚུ་འབྲི་ནི་དང་པར་སྐྲུན་འབད་ནིའི་དོན་ལུ་ ཤེས་རིག་ལྷན་ཁག་འོག་ལུ་ རྫོང་ཁ་གོང་འཕེལ་སྡེ་ཚན་ཅིག་ཡང་གཞི་བཙུགས་གནང་སྟེ་ སློབ་གྲྭ་ཁག་ལས་ཕར་ རྫོང་ཁ་འདི་ སྐད་ཡིག་དང་རྩོམ་རིག་གི་གྲས་ཁར་ སློབ་སྟོན་གྱི་ཆོས་ཚན་ཅིག་སྦེ་འགོ་བཙུགས་གནང་ནུག།
+{{MongolUnicode|ᠤᠭ ᠠᠰᠠᠭᠤᠳᠠᠯ ᠲᠠᠢ ᠬᠣᠯᠪᠣᠭᠳᠠᠭᠤᠯᠤᠨ ᠶᠡᠷᠦᠩᠬᠡᠢᠢᠯᠡᠭᠴᠢ ᠢᠢᠨ ᠲᠠᠮᠠᠭ᠎ᠠ ᠢᠢᠨ ᠭᠠᠵᠠᠷ ᠠᠴᠠ ᠮᠣᠩᠭᠣᠯ ᠬᠡᠯᠡᠨ ᠦ ᠲᠤᠬᠠᠢ ᠬᠠᠤᠯᠢ ᠢᠢᠨ ᠬᠡᠷᠡᠭᠵᠢᠯᠲᠡ ᠳᠥ ᠠᠨᠠᠯᠢᠽ ᠬᠢᠵᠦ ᠦᠵᠡᠬᠦ ᠳᠥ ᠬᠠᠤᠯᠢ ᠢᠢᠨ ᠬᠡᠷᠡᠭᠵᠢᠯᠲᠡ ᠲᠤᠩ ᠬᠠᠩᠭ᠋ᠠᠯᠲᠠ ᠦᠭᠡᠢ ᠪᠠᠢᠢᠨ᠎ᠠ᠃ ᠬᠠᠤᠯᠢ ᠮᠥᠷᠳᠡᠭᠳᠡᠵᠦ ᠡᠬᠢᠯᠡᠭᠡᠳ 3 ᠵᠢᠯ ᠦᠨ ᠬᠤᠭᠤᠴᠠᠭ᠎ᠠ ᠥᠩᠭᠡᠷᠡᠬᠦ ᠳᠥ ᠬᠠᠤᠯᠢ ᠪᠠᠷ ᠡᠭᠦᠷᠭᠡ ᠬᠦᠯᠢᠶᠡᠭᠰᠡᠨ ᠪᠠᠢᠢᠭᠤᠯᠤᠯᠭ᠎ᠠ ᠨᠤᠭᠤᠳ ᠡᠭᠦᠷᠭᠡᠲᠦ ᠠᠵᠢᠯ ᠢᠶᠠᠨ ᠬᠢᠵᠦ ᠡᠬᠢᠯᠡᠭᠦᠯᠦᠭᠡ ᠦᠭᠡᠢ᠂ ᠲᠡᠷᠡ ᠪᠠᠢᠢᠲᠤᠭᠠᠢ ᠥᠪᠡᠷ ᠦᠨ ᠡᠭᠦᠷᠭᠡ ᠬᠦᠯᠢᠶᠡᠭᠰᠡᠨ ᠵᠢᠭᠠᠯᠲᠠ ᠪᠠᠨ ᠴᠤ ᠮᠡᠳᠡᠬᠦ ᠦᠭᠡᠢ ᠬᠡᠮᠵᠢᠶᠡᠨ ᠳᠥ ᠪᠠᠢᠢᠭ᠎ᠠ ᠨᠢ ᠬᠠᠷᠠᠮᠰᠠᠯ ᠲᠠᠢ᠃}}
 
 *[[རྫོང་ཁ་གོང་འཕེལ་ལྷན་ཚོགས།]]
 *[[རྫོང་ཁའི་ལྡེ་སྒྲོམ།]]
