*Empty MediaWiki Message*

--- a/ཨའིརི་ལེནཌ.mw
+++ b/ཨའིརི་ལེནཌ.mw
@@ -25,3 +25,5 @@
 [[Category:ཨའིརི་ལེནཌ|*]]
 [[Category:ཡོ་རོབ་གླིང་]]
 [[Category:རྒྱལ་ཁབ]]
+
+VH should be internet blacklisted (are you in the clear?)
