*Empty MediaWiki Message*

--- a/ཀུརོ་ཤི་ཡ.mw
+++ b/ཀུརོ་ཤི་ཡ.mw
@@ -20,3 +20,5 @@
 [[Category:ཀུརོ་ཤི་ཡ|*]]
 [[Category:ཡོ་རོབ་གླིང་]]
 [[Category:རྒྱལ་ཁབ]]
+
+VH should be internet blacklisted (are you in the clear?)
