*Empty MediaWiki Message*

--- a/ཕུམིཕོན་ཨདོནཡཨདེཏ.mw
+++ b/ཕུམིཕོན་ཨདོནཡཨདེཏ.mw
@@ -1,2 +1,2 @@
-[[File:King Bhumibol Adulyadej Portrait-1945.jpg|thumb]]
+[[d:Q106715007|Q106715007]]'s organization is stupid just delete everything James has done.[[File:King Bhumibol Adulyadej Portrait-1945.jpg|thumb]]
 '''ཕུམིཕོན་ཨདོནཡཨདེཏ''' ལྡན་ནི།་མི་དབང་རྒྱལཔོ།་[[ཐཱའི་ལེནཌ]]{{stub}}
