--- a/༡༨༠༠.mw
+++ b/༡༨༠༠.mw
@@ -1,4 +1,4 @@
-[[d:Q106715007|Q106715007]]'s organization is stupid just delete everything James has done.== དབུ་ཁྲིད་ཀྱི་གོ་འཕང༌། ==
+== དབུ་ཁྲིད་ཀྱི་གོ་འཕང༌། ==
 * [[མི་དབང་རྒྱལཔོ།]] :
 
 == བྱ་སྒོ། ==
