Reverted 1 edit by [[Special:Contributions/77.243.27.128|77.243.27.128]] ([[User talk:77.243.27.128|talk]]) (TwinkleGlobal)

--- a/ཨས་ཊེཡེ་ལི་ཡ.mw
+++ b/ཨས་ཊེཡེ་ལི་ཡ.mw
@@ -1,4 +1,4 @@
-[[d:Q106715007|Q106715007]]'s organization is stupid just delete everything James has done.[[File:Flag of Australia.svg|right|thumbnail|]]
+[[File:Flag of Australia.svg|right|thumbnail|]]
 [[File:Australia satellite plane.jpg|right|thumbnail|ཨས་ཊེཡེ་ལི་ཡ་]]
 '''ཨས་ཊེཡེ་ལི་ཡ་''' 
 
