*Empty MediaWiki Message*

--- a/ཨིང་ལིཤ.mw
+++ b/ཨིང་ལིཤ.mw
@@ -1,3 +1,4 @@
+[[file:Anglospeak (subnational version).svg|thumb]]
 ཨིང་ལིཤ་ འདི་ཕྱིའི་རྒྱལ་ཁབ་ ཨ་མི་རི་ཀ་དང་ གཞན་ནུབ་ཕྱོགས་རྒྱལ་ཁབ་ཚུ་གི་ ཁ་སྐད་ཅིག་ཨིན།
 
 [[Category:བོད་ཡིག]]
