--- a/འབྲུག་གི་དངུལ་ཀྲམ།.mw
+++ b/འབྲུག་གི་དངུལ་ཀྲམ།.mw
@@ -1,3 +1,4 @@
 དངུལ་ཀྲམ་འདི་འབྲུག་གི་ཤོག་དངུལ་གྱི་མིང.ཨིན། དངུལ་ཀྲམ་༡་གི་ཕྱེད་ཏམ་༡༠༠་ཅི་ཨིན།འབྲུག་རྒྱལ་གཞུང་དངུལ་ལས་དབང་འཛིན་གྱི་ཐ་ལ་དང་དངུལ་ཀྲམ་ཛོ་ཀྲུན་ཚུ་བདག་འཛིན་སྦེཝ་ཨིན། འབྲུག་གི་དངུལ་ཀྲམ་འདི་རྒྱ་གར་གི་རུ་པི་དང་དངུལ་ཤུག་འདྲན་འདྲ་ཡོདཔ་ཨིན། 
 [[Category:Articles containing Dzongkha-language text]]
 [[Category:Articles containing Dzongkha-language text]]
+{{Stub}}
