*Empty MediaWiki Message*

--- a/ལྟ་རྫོང་།_(སྤ་རོ).mw
+++ b/ལྟ་རྫོང་།_(སྤ་རོ).mw
@@ -1,3 +1,4 @@
+{{delete|ལྟ་རྫོང་། (སྤ་རོ)}}
 [[File:Ta Dzong museum.jpg|thumb|left|350px]]
 
 རྫོང་འདི་ སྤ་རོ་ཚོང་འདུས་ཁྲོམ་ལས་ ཀི་ལོ་མི་ཊར་ ཕྱེད་དང་དྲུག་དང་ རིན་སྤུང་རྫོང་ལས་ མཐོ་ཚད་མི་ཊར་ ༥༠༠ དེ་གཅིག་གི་ས་ཁ་ བཞེངས་ཡོདཔ་ཨིན། རིན་སྤུང་རྫོང་འདི་བཞེངས་ཚར་བའི་ཤུལ་ལུ་ [[སྡེ་སྲིད་གཉིས་པ་]] བསྟན་འཛིན་འབྲུག་སྒྲ་གི་ སྐབས་ལུ་ བོད་དང་རྒྱ་གར་ལས་དམག་གི་འཇིགས་པ་ཚུ་ ལེ་ཤ་གཅིག་འབྱུང་ཡོདཔ་ལས་ འདི་ཚུ་ལས་ སྲུང་སྐྱོབ་འབད་ནིའི་དོན་ལུ་དང་ [[དེ་གི་ནང་དོ་གཉིས་ལས་ཡང་]] རིན་སྤུང་རྫོང་འདི་སྲུང་སྐྱོབ་འབད་ནིའི་དོན་ལུ་ ལ་སྔོན་པ་ བསྟན་འཛིན་འབྲུག་སྒྲ་དང་ ཆོས་རྒྱལ་མི་འགྱུར་བསྟན་པ་གཉིས་ཀྱིས་ དུས་རབ་ ༡༧ པའི་ བར་མཚམས་ལུ་ ལྟ་རྫོང་འདི་བཞེངས་གནང་ནུག།
