/* འབྲི་ཐངས་ལམ་ལུགས། */

--- a/རྫོང་ཁ་.mw
+++ b/རྫོང་ཁ་.mw
@@ -5,7 +5,7 @@
 *[[རྫོང་ཁའི་ལྡེ་སྒྲོམ།]]
 
 == འབྲི་ཐངས་ལམ་ལུགས། ==
-རྫོང་ཁ་འདི་ བོད་སྐད་ཡི་ གསལ་བྱེད་ལག་ལེན་ཐབ་དོ་ཡོདཔ་ཨིན། ཨིན་རུང་ འབྲི་བའི་སྐབས་ སྔོན་མ་ལས་ཡོད་པའི་ ཡི་་གུའི་འཟོ་རྣམ་ ''ཚུག་ཡིག་''  ཟེར་མི་འདི་ལག་ལེན་ཐབ་དོ་ཡོདཔ་ཨིན།
+རྫོང་ཁ་འདི་ བོད་སྐད་ཀྱི་ གསལ་བྱེད་ལག་ལེན་ཐབ་དོ་ཡོདཔ་ཨིན། ཨིན་རུང་ འབྲི་བའི་སྐབས་ སྔོན་མ་ལས་ཡོད་པའི་ ཡི་་གུའི་བཟོ་རྣམ་ ''ཚུག་ཡིག་''  ཟེར་མི་འདི་ལག་ལེན་ཐབ་དོ་ཡོདཔ་ཨིན།
 
 === གསལ་བྱེད་གསུམ་བཅུ། ===
 ཀ་ ཁ་ ག་ ང་། ཅ་ ཆ་ ཇ་ ཉ། ཏ་ ཐ་ ད་ ན། པ་ ཕ་ བ་ མ། ཙ་ ཚ་ ཛ་ ཝ། ཞ་ ཟ་ འ་ ཡ། ར་ ལ་ ཤ་ ས། ཧ་ ཨ།
