--- a/རྫོང་ཁ་.mw
+++ b/རྫོང་ཁ་.mw
@@ -7,6 +7,12 @@
 == འབྲི་ཐངས་ལམ་ལུགས། ==
 རྫོང་ཁ་འདི་ བོད་སྐད་ཀྱི་ གསལ་བྱེད་ལག་ལེན་ཐབ་དོ་ཡོདཔ་ཨིན། ཨིན་རུང་ འབྲི་བའི་སྐབས་ སྔོན་མ་ལས་ཡོད་པའི་ ཡི་་གུའི་བཟོ་རྣམ་ ''ཚུག་ཡིག་''  ཟེར་མི་འདི་ལག་ལེན་ཐབ་དོ་ཡོདཔ་ཨིན།
 
+== ཡིག་ཐོག་ལུ་འབྲི་སྲོལ། ==
+རྫོང་ཁ་འདི་ སྤྱི་ལོ་ ༡༩༧༡ གི་ལོ་ལུ་ རྒྱལ་ཡོངས་ཀྱི་ཁ་སྐད་འབད་ ངོས་འཛིན་གནང་ཞིནམ་ལས་ འབྲུག་མི་ཆེ་འབྲིང་ཆུང་གསུམ་ག་ར་གིས་ ངེས་པར་དུ་ཤེས་དགོཔ་ལས་བརྟེན་  སྤྱི་ལོ་ ༡༩༧༡ གི་ལོ་ལས་ སློབ་གྲྭ་ཁག་ལུ་ སློབ་སྟོན་འབད་ནི་འགོ་བཙུགས་ཞིནམ་ལས་ ཡིག་ཐོག་ལུ་འབྲི་ནི་འགོ་བཙུགས་ནུག
+
+== རྫོང་ཁ་གི་ཡི་གེའི་བཟོ་རྣམ། ==
+དེང་སང་ཀློག་རིག་ནང་འབྲི་བའི་སྐབས་ལག་ལེན་འཐབ་མི་ རྫོང་ཁའི་ཡི་གེ་བཟོ་རྣམ་ DDC Uchen དང་ DDC Rinzin དང་Jomolhari དང་ DDC Joyig དང་Wangdi 29 ཚུ་ཡོདཔ་ཨིན།
+
 === གསལ་བྱེད་གསུམ་བཅུ། ===
 ཀ་ ཁ་ ག་ ང་། ཅ་ ཆ་ ཇ་ ཉ། ཏ་ ཐ་ ད་ ན། པ་ ཕ་ བ་ མ། ཙ་ ཚ་ ཛ་ ཝ། ཞ་ ཟ་ འ་ ཡ། ར་ ལ་ ཤ་ ས། ཧ་ ཨ།
 
@@ -14,7 +20,6 @@
 ཨི་ ཨུ་ ཨེ་ ཨོ
 
 == རྗོད་སྒྲ། ==
-<br />
 
 == དཔེ་ཡིག། ==
         
